@@ -5,7 +5,7 @@
 
 __TRACE_1("","_this")
 
-if ((_this select 1) in d_actionkeys_teamswitch && {!(_this select 2) && {!(_this select 3) && {!(_this select 4) && {alive player && {!(player getVariable "xr_pluncon") && {!(player getVariable ["ace_isunconscious", false])}}}}}}) then {
+if ((_this select 1) in (actionKeys "TeamSwitch") && {!(_this select 2) && {!(_this select 3) && {!(_this select 4) && {alive player && {!(player getVariable "xr_pluncon") && {!(player getVariable ["ace_isunconscious", false])}}}}}}) then {
 	[0, _this] call d_fnc_KeyDownCommandingMenu;
 	true
 } else {
